--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
           <a href="https://discord.gg/cBRtfnFFPz" target="_blank">Discord</a>
         </li>
         <li>
-            <a href="https://app.hackthebox.com/profile/444558" target="_blank">HackTheBox</a>
+          <a href="https://www.youtube.com/channel/UCK2sAQ824p2oAsmr2Cp2-SQ/featured" target="_blank">YouTube</a>
         </li>
-        <li>
-          <a href="https://music.youtube.com/channel/UCK2sAQ824p2oAsmr2Cp2-SQ" target="_blank">YT Music</a>
-        </li>
+        <!--<li>
+            CTF{https://app.hackthebox.com/profile/444558}
+        </li>-->
       </ul>
     </main>
   </div>
@@ -46,16 +46,22 @@
       <h2>about-me:$</h2>
       <p>impulsado | 2003 <br/>
         Current ASIR student and Cybersecurity enthusiast.
+      </p>
       <p>
         Computing as art, so I am constantly out of my comfort zone.
       </p>
     </div>
 
-    <div id="contact-content">
+    <div id="projects-content">
       <h2>projects:$</h2>
-      <p>I am always working for my own. Links can change.</p>
+      <p>
+        I am always working for my own. <br/>
+        <a href="https://t.me/impulsado" target="_blank">DM</a> me for more information.
+      </p>
+      
       <ul>
         <li><a href="https://github.com/impulsado/discordBot" target="_blank">discordBot</a></li>
+        <li><a href="https://github.com/impulsado/personalWeb" target="_blank">personalWeb</a></li>
         <li>personalDB (Comming Soon!)</li>
       </ul>
     </div>
