--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a href="https://discord.gg/cBRtfnFFPz" target="_blank">Discord</a>
         </li>
         <li>
-          <a href="https://www.youtube.com/channel/UCK2sAQ824p2oAsmr2Cp2-SQ/featured" target="_blank">YouTube</a>
+          <a href="https://open.spotify.com/user/vqgl3kfzssa6mm1qer5qx3e4u?si=517a48fbfd3b4c1e" target="_blank">Spotify</a>
         </li>
         <!--<li>
             CTF{https://app.hackthebox.com/profile/444558}
