(Mod) Modded Index.html

--- a/index.html
+++ b/index.html
@@ -1,74 +1,69 @@
 <!DOCTYPE html>
+
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
-  <title>REX</title>
-  <link rel="shortcut icon" href="img/star.png" type="image/x-icon">
-</head>
-
-<body>
-  <div class="container">
-    <nav>
-      <ul>
-        <li id="about" class="underline">/about</li>
-        <li id="contact" class="underline">/projects</li>
-      </ul>
-    </nav>
-
-    <main>
-      <h1>impulsado:~$<span class="cursor">|</span></h1>
-      <ul>
-        <li>
-          <a href="https://www.instagram.com/impulsado/" target="_blank">Instagram</a>
-        </li>
-        <li>
-          <a href="https://www.twitch.tv/impulsado" target="_blank">Twitch</a>
-        </li>
-        <li>
-          <a href="https://discord.gg/cBRtfnFFPz" target="_blank">Discord</a>
-        </li>
-        <li>
-          <a href="https://open.spotify.com/user/vqgl3kfzssa6mm1qer5qx3e4u?si=517a48fbfd3b4c1e" target="_blank">Spotify</a>
-        </li>
-        <!--<li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>REX</title>
+    <link rel="shortcut icon" href="img/star.png" type="image/x-icon">
+  </head>
+  <body>
+    <div class="container">
+      <nav>
+        <ul>
+          <li id="about" class="underline">/about</li>
+          <li id="projects" class="underline">/projects</li>
+        </ul>
+      </nav>
+      <main>
+        <h1>impulsado:~$ <span class="cursor">|</span>
+        </h1>
+        <ul>
+          <li>
+            <a href="https://www.instagram.com/impulsado/" target="_blank">Instagram</a>
+          </li>
+          <li>
+            <a href="https://www.twitch.tv/impulsado" target="_blank">Twitch</a>
+          </li>
+          <li>
+            <a href="https://discord.gg/cBRtfnFFPz" target="_blank">Discord</a>
+          </li>
+          <li>
+            <a href="https://github.com/impulsado" target="_blank">GitHub</a>
+          </li>
+          <!--<li>
             CTF{https://app.hackthebox.com/profile/444558}
-        </li>-->
-      </ul>
-    </main>
-  </div>
-
-  <div class="hidden">
-    <div id="about-content">
-      <h2>about-me:$</h2>
-      <p>impulsado | 2003 <br/>
-        Current ASIR student and Cybersecurity enthusiast.
-      </p>
-      <p>
-        Computing as art, so I am constantly out of my comfort zone.
-      </p>
+          </li>-->
+        </ul>
+      </main>
     </div>
-
-    <div id="projects-content">
-      <h2>projects:$</h2>
-      <p>
-        I am always working for my own. <br/>
-        <a href="https://t.me/impulsado" target="_blank">DM</a> me for more information.
-      </p>
-      
-      <ul>
-        <li><a href="https://github.com/impulsado/discordBot" target="_blank">discordBot</a></li>
-        <li><a href="https://github.com/impulsado/personalWeb" target="_blank">personalWeb</a></li>
-        <li>personalDB (Comming Soon!)</li>
-      </ul>
+    <div class="hidden">
+      <div id="about-content">
+        <h2>about-me:$</h2>
+        <p>impulsado | 2003 <br /> Current ASIR student and Cybersecurity enthusiast. </p>
+        <p> Computing as art, so I am constantly out of my comfort zone. </p>
+      </div>
+      <div id="projects-content">
+        <h2>projects:$</h2>
+        <p> Working on my own. <br />
+          <a href="https://t.me/impulsado" target="_blank">DM</a> me for more info.
+        </p>
+        <ul>
+          <li>
+            <a href="https://github.com/impulsado/wannaNotes" target="_blank">wannaNotes</a>
+          </li>
+          <li>
+            <a href="https://github.com/impulsado/homeLab" target="_blank">homeLab</a>
+          </li>
+          <li>
+            <a href="https://notes.impulsado.org/" target="_blank">docsWeb</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-  
-  <script src="jss/winbox.bundle.js"></script>
-  <script src="jss/main.js"></script>
-</body>
-
+    <script src="jss/winbox.bundle.js"></script>
+    <script src="jss/main.js"></script>
+  </body>
 </html>
