(MOD) Changed Discord for Telegram

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <a href="https://www.instagram.com/impulsado/" target="_blank">Instagram</a>
           </li>
           <li>
-            <a href="https://www.twitch.tv/impulsado" target="_blank">Twitch</a>
+            <a href="https://t.me/impulsado" target="_blank">Telegram</a>
           </li>
           <li>
-            <a href="https://discord.gg/cBRtfnFFPz" target="_blank">Discord</a>
+            <a href="https://www.twitch.tv/impulsado" target="_blank">Twitch</a>
           </li>
           <li>
             <a href="https://github.com/impulsado" target="_blank">GitHub</a>
